Prevent wrapping, and therefore hiding long names with spaces

--- a/jquery.bracket.sass
+++ b/jquery.bracket.sass
@@ -90,6 +90,8 @@ div.jQBracket
       height: inherit
       position: absolute
       width: 70px
+      white-space: nowrap
+      overflow: hidden
 
       &[disabled]
         cursor: default
